<resources>
    <string name="AlternativeLogBuffers">Alternative Log Buffers</string>
    <string name="Apk">Log-cmd of Apk</string>
    <string name="Apk_DLC">Apk DLC</string>
    <string name="BinaryLog">Binary Log</string>
    <string name="Clearlog_cmds">Clear log-cmds</string>
    <string name="Complete">Complete</string>
    <string name="DLC">DLC switch</string>
    <string name="FileSize">File Size</string>
    <string name="Filter">Filter</string>
    <string name="Framework">Log-cmd of Framework</string>
    <string name="Linux">Log-cmd of Linux</string>
    <string name="Load_log_cmds_from_file">Load log-cmds from file</string>
    <string name="LogOutputFormat">Log Output Format</string>
    <string name="Main">Main</string>
    <string name="MaxDirNo">MaxDirNo</string>
    <string name="Reset_log_cmds">Reset log-cmds</string>
    <string name="Reset_to_default">Reset to default</string>
    <string name="RotateFileCount">Rotate File Count</string>
    <string name="Run_cmd">Run CMD</string>
    <string name="StartTcpdump">Start tcpdump</string>
    <string name="StopTcpdump">Stop tcpdump</string>
    <string name="UpdateQXDMMTPInfo">Update QXDM MTP information</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="adb_log_summary">Config adb debug mask</string>
    <string name="adb_log_title">ADB Log Config</string>
    <string name="alert_dialog_cancel">No</string>
    <string name="alert_dialog_ok">Yes</string>
    <string name="alert_dialog_reset">RESET</string>
    <string name="app_name">DbgCfgTool</string>
    <string name="checkbox_qdiaglogcat">Enable diag logging</string>
    <string name="checkbox_qdiaglogcat_bootrun">Enable diag when boot</string>
    <string name="checkbox_qdiaglogcat_external">Enable diag logging(to external SD card)</string>
    <string name="config_log_name">2 - Logger Conf.</string>
    <string name="copytoSD">Copy logs</string>
    <string name="dalvik_heap_dump_summary">Memory leaks tool for Java</string>
    <string name="dalvik_heap_dump_title">JAVA Heap Dump</string>
    <string name="debugdriver_label">Linux/Android Debug Settings</string>
    <string name="debugdriver_smd_rpcrouter_summary">/sys/module/smd_rpcrouter/parameters/debug_mask</string>
    <string name="debugdriver_smd_rpcrouter_title">SMD_RPCRouter</string>
    <string name="debugmodem_diag_title">Diag Log</string>
    <string name="debugmodem_label">Debug Modem</string>
    <string name="debugmodem_modemgeneralcfg_title">Modem General Config</string>
    <string name="debugmodem_modemlinkcfg_title">Modem Link Config</string>
    <string name="debugmodem_modemramdumpcfg_title">RAM Dump Config</string>
    <string name="debugmodem_qxdm_title">QXDM Log</string>
    <string name="debugmodem_selefilter_title">Select Filter</string>
    <string name="debugssrmodem_modemramdumpcfg_title">SSR RAM Dump Config</string>
    <string name="diag_delete_after_copy">Delete files after copy</string>
    <string name="diag_log_copy">Copy diag log</string>
    <string name="dynamic_log_control_name">DynamicLogControl</string>
    <string name="hello_world">Hello world!</string>
    <string name="linux_android_debug_name">3 - Linux/Android Debug</string>
    <string name="modem_conf_name">4 - Modem Conf.</string>
    <string name="modem_conf_name_original">4 - Modem Conf.(DbgCfgTool Original)</string>
    <string name="okcancel_4_EventsRequireSize">Events log size is too big. Please decrease file size or rotate count.</string>
    <string name="okcancel_4_MainRequireSize">Main log size is too big. Please decrease file size or rotate count.</string>
    <string name="okcancel_4_RadioRequireSize">Radio log size is too big. Please decrease file size or rotate count.</string>
    <string name="okcancel_4_SystemRequireSize">System log size is too big. Please decrease file size or rotate count.</string>
    <string name="okcancel_4_can_not_save_config">Can not save current configuration!</string>
    <string name="okcancel_4_change_logging">Are you sure to change logging status?</string>
    <string name="okcancel_4_copytoSdDone">Copy to SD Done.</string>
    <string name="okcancel_4_copytointernalsd">Copy to internal SD?</string>
    <string name="okcancel_4_copytosd">Copy to SD?</string>
    <string name="okcancel_4_modem_debug_disable">This will also disable detect HW reset and WT cache</string>
    <string name="okcancel_4_modem_debug_enable">This will also enable detect HW reset and WT cache</string>
    <string name="okcancel_4_modemdiagerror">Copy failed. Please disable MODEM_LOGGER and USB_QXDM_MODE settings in Modem General Config. Then reset device and try again.</string>
    <string name="okcancel_4_needreboot">Please reboot device!</string>
    <string name="okcancel_4_nosdcard">Can not found SD card</string>
    <string name="okcancel_4_readdefault">Are You Sure to Read Default?</string>
    <string name="okcancel_4_saveconfig">Are You Sure to Save Config?</string>
    <string name="okcancel_4_set_to_externalsd">When ME restart, please remember to restart logging manually!</string>
    <string name="okcancel_4_start_logging">Are you sure to start logging?</string>
    <string name="okcancel_4_stop_logging">Are you sure to stop logging?</string>
    <string name="okcancel_4_unmountsd">Eject SD ?</string>
    <string name="okcancel_deletealllog">Delete Log in the SDcard and data</string>
    <string name="okcancel_deletedatalog">Delete Log in the data</string>
    <string name="okcancel_deletelog">Are you sure?</string>
    <string name="okcancel_deletelogbutton">start</string>
    <string name="okcancel_deletesdlog">Delete Log in the SDcard</string>
    <string name="permission_command_desc">Allow app to read / update debug configuration or make device generate some debug logs.</string>
    <string name="permission_command_label">Debug Configuration Permission</string>
    <string name="power_monitor">5 - Power log confg.</string>
    <string name="qdiaglogcat_settings">QXDM log settings</string>
    <string name="readdefault">Read Default Config</string>
    <string name="saveconfig">Save Config</string>
    <string name="sp_prompt">Choose One</string>
    <string name="strClearLog">Clear Log after reboot</string>
    <string name="strDebug">Run</string>
    <string name="strDebugCommand">Debug command</string>
    <string name="strDebugFs">Mount DebugFS when boot</string>
    <string name="strDebugNote">"Debug utilities
 Which command do you want to execute?"</string>
    <string name="strDiagLog">Diag Log(QXDM)</string>
    <string name="strEnableDumpsysteminfo">Enable DumpSystemInfo(ps, top)</string>
    <string name="strEnableKlogd">Enable Klogd</string>
    <string name="strEnableLog">Enable Log</string>
    <string name="strEnableLogger">Launch when boot</string>
    <string name="strEnableWlogd">Enable WakeLock</string>
    <string name="strFileDestination">Save To</string>
    <string name="strFileSource">Source</string>
    <string name="strHostRamdumpConf">Host Ramdump Conf.</string>
    <string name="strLogLevelAdjustment">Log Level Adjustment</string>
    <string name="strLogcatEvents1">"
Logcat Configurations - Events
"</string>
    <string name="strLogcatGlobal1">"
Global Logcat Configurations
"</string>
    <string name="strLogcatMain1">"
Logcat Configurations - Main
"</string>
    <string name="strLogcatRadio1">"
Logcat Configurations - RADIO
"</string>
    <string name="strLogcatSystem1">"
Logcat Configurations - System
"</string>
    <string name="strPlatformSelection">Platform</string>
    <string name="strSSRRamdumpConf">SSR(modem) Ramdump Conf.</string>
    <string name="strTcpdumpTool">Tcpdump tool</string>
    <string name="str_TRACE_ADB">0x01 TRACE_ADB</string>
    <string name="str_TRACE_JDWP">0x100 TRACE_JDWP</string>
    <string name="str_TRACE_PACKETS">0x04 TRACE_PACKETS</string>
    <string name="str_TRACE_RWX">0x10 TRACE_RWX</string>
    <string name="str_TRACE_SOCKETS">0x02 TRACE_SOCKETS</string>
    <string name="str_TRACE_SYNC">0x40 TRACE_SYNC</string>
    <string name="str_TRACE_SYSDEPS">0x80 TRACE_SYSDEPS</string>
    <string name="str_TRACE_TRANSPORT">0x08 TRACE_TRANSPORT</string>
    <string name="str_TRACE_USB">0x20 TRACE_USB</string>
    <string name="str_adb_log_note">This can enable adb debug messages.</string>
    <string name="str_android_log_ctrler">Android Log Level</string>
    <string name="str_apply_profile_btn">Apply Selected Profile</string>
    <string name="str_auto_download_btn">Auto Download</string>
    <string name="str_auto_dumpheap">Auto Dump Heap</string>
    <string name="str_auto_dumpheap_ANR">Dump Heap while ANR occurred</string>
    <string name="str_button_Save">Save</string>
    <string name="str_button_adblog">ADB Log conf. saved!</string>
    <string name="str_button_error">Debug Config Access Error</string>
    <string name="str_button_saved_reset">Config data saved!</string>
    <string name="str_button_smemlog">Smemlog conf. saved!</string>
    <string name="str_change_log_level">Change</string>
    <string name="str_copy_bugreport">Dump bugreport data</string>
    <string name="str_copy_large_data_warning">This will cost extra time and memory space!</string>
    <string name="str_copy_tcpdump">Copy tcpdump data</string>
    <string name="str_copy_wlan_warning">This option need enable bugreport and may cost extra time and memory space!</string>
    <string name="str_copy_wlanlog">Copy wlanlog</string>
    <string name="str_dalvik_heap_dump_btn">Dump Heap to Sdcard</string>
    <string name="str_debug_android_uartmsg_cfg">ANDROID_UARTMSG</string>
    <string name="str_debug_android_uartmsg_events_cfg">Events</string>
    <string name="str_debug_android_uartmsg_main_cfg">Main</string>
    <string name="str_debug_android_uartmsg_radio_cfg">Radio</string>
    <string name="str_debug_android_uartmsg_system_cfg">System</string>
    <string name="str_debug_auto_start_eml_cfg">AUTO_START_EML</string>
    <string name="str_debug_cpu_usage_cfg">CPU_USAGE</string>
    <string name="str_debug_modem_logger_cfg">MODEM_LOGGER</string>
    <string name="str_debug_printf_uartmsg_cfg">PRINTF_UARTMSG</string>
    <string name="str_debug_rpcmsg_cfg">RPC_MSG</string>
    <string name="str_debug_uartmsg_cfg">UARTMSG</string>
    <string name="str_debug_usb_qxdm_mode_cfg">USB_QXDM_MODE</string>
    <string name="str_debug_wp_dbgbuf_cfg">WP_DBGBUF</string>
    <string name="str_del_logs">Delete logs after Copy to SD</string>
    <string name="str_dest_auto_switch">Auto Switch Storage</string>
    <string name="str_diag_dialog_title">Filter Chooser</string>
    <string name="str_diag_filter_key">diag_filter_key</string>
    <string name="str_diag_filter_summary">select a appropriate filter</string>
    <string name="str_diag_select_filter">Select filter</string>
    <string name="str_modem_link_auto_enable">Enable modem link automatically when booting</string>
    <string name="str_modem_modemlink_note">Modem Link Configurations</string>
    <string name="str_modem_ramdump_note">RAM Dump Configurations</string>
    <string name="str_modem_ramdump_select_note">Select the error action:</string>
    <string name="str_no_action_btn">No Action</string>
    <string name="str_reset_btn">Reset</string>
    <string name="str_save_debug_config_note">Click to save this configuration</string>
    <string name="str_ssr_option_label">SSR Option(Modem restart level)</string>
    <string name="str_ssr_option_related">Related</string>
    <string name="str_ssr_option_select_desc">Select modem restart level</string>
    <string name="str_ssr_option_system">System</string>
    <string name="str_start_port_bridge">Start Bridge</string>
    <string name="str_stop_port_bridge">Stop Bridge</string>
    <string name="uart_debug_config_summary">UART debug message configuration</string>
    <string name="uart_debug_config_title">UART Debug Config</string>
</resources>