<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_modem_ramdump_note" />
        <Button android:id="@id/btnModemRamDumpSave" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_button_Save" />
        <RadioGroup android:id="@id/RadioGroup01" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_modem_ramdump_select_note" />
            <RadioButton android:id="@id/RadioButton01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_auto_download_btn" />
            <RadioButton android:id="@id/RadioButton02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_reset_btn" />
            <RadioButton android:id="@id/RadioButton03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_no_action_btn" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>