<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/fragment_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/Apk"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/btn1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Reset_log_cmds" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    <Button android:id="@id/btn4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/Reset_to_default" android:layout_below="@id/btn1" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
    <Button android:id="@id/btn2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/Clearlog_cmds" android:layout_below="@id/btn4" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
    <Button android:id="@id/btn3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/Load_log_cmds_from_file" android:layout_below="@id/btn2" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
</RelativeLayout>