<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_modem_modemlink_note" />
    <Button android:id="@id/btnModemLinkSave" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_button_Save" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <CheckBox android:id="@id/cbModemLinkEnable" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_modem_link_auto_enable" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <Button android:id="@id/btnStartPortBridgeFih" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_start_port_bridge" />
        <Button android:id="@id/btnStopPortBridgeFih" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_stop_port_bridge" />
    </LinearLayout>
</LinearLayout>