<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:id="@id/btnSsrOptionSave" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_button_Save" />
        <RadioGroup android:id="@id/RadioGroup01" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_ssr_option_select_desc" />
            <RadioButton android:id="@id/RadioButton01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_ssr_option_related" />
            <RadioButton android:id="@id/RadioButton02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_ssr_option_system" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>